Mon Sep  1 20:11:02 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (rbtime2vtdate): try to convert millisecond
	  of Time object to millisecond of VT_DATE VARIANT.
	* test/win32ole/test_win32ole_variant.rb
	  (test_conversion_time2date_with_msec): ditto.

Sun Aug 31 16:58:49 2014  Tanaka Akira  <akr@fsij.org>

	* lib/benchmark.rb: Fix a syntax error.

Sun Aug 31 08:46:44 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (gzfile_reset): preserve ZSTREAM_FLAG_GZFILE
	  [Bug #10101]

	* test/zlib/test_zlib.rb (test_rewind): test each_byte

Sat Aug 30 19:22:47 2014  Eric Wong  <e@80x24.org>

	* symbol.c (rb_sym2id): do not return garbage object

Sat Aug 30 06:39:48 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix NameError dumping and
	  loading. Fixes GH #85. Thanks @brentdax for the patch!
	* test/psych/test_exception.rb: test for fix

Sat Aug 30 06:23:40 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix loading strings that
	  look like integers but have a newline. Fixes GH #189
	* test/psych/test_string.rb: test for fix

Sat Aug 30 06:10:39 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: merge keys with a hash
	  should merge the hash in to the parent.
	* test/psych/test_merge_keys.rb: test for change. Fixes GH #202

Sat Aug 30 06:00:26 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: quoted "<<" strings
	  should not be treated as merge keys.
	* ext/psych/lib/psych/visitors/yaml_tree.rb: hashes with keys
	  containing "<<" should roundtrip.
	* test/psych/test_merge_keys.rb: test for change. Fixes GH #203

Fri Aug 29 17:56:44 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/net/imap/test_imap_response_parser.rb: removed needless code.

Fri Aug 29 17:36:58 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
