@@ -18,6 +18,8 @@ SPEC_GIT_BASE = git://github.com/nurse
 MSPEC_GIT_URL = $(SPEC_GIT_BASE)/mspec.git
 RUBYSPEC_GIT_URL = $(SPEC_GIT_BASE)/rubyspec.git
 
+SIMPLECOV_GIT_URL = git://github.com/hsbt/simplecov.git
+
 STATIC_RUBY   = static-ruby
 
 EXTCONF       = extconf.rb
